--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Haoyu Liu"
-  avatar           : "images/android-chrome-512x512.png"
-  bio              : "ICT, CAS"
+  avatar           : "images/OIP.jpg"
+  bio              : "[Institute of Computing Technology (ICT)](http://www.ict.ac.cn/), [Chinese Academy of Sciences (CAS)](http://www.cas.ac.cn/)"
   location         : "Beijing, China"
   employer         :
   pubmed           : 
